# quran-tui

./: LICENSE  README.md  install.cmd  install.ps1  install.sh  pyproject.toml
quran_tui/: __init__.py  cli.py  config.py  data.py  models.py  rtl.py  search.py  state.py  ui.py  update.py
tests/: test_search.py  test_state.py  test_update.py
